src/objects/ADvendio__Attendee__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Call_Report__c</fullName>
        <description>Enter the visit report to which this contact shall be assigned.</description>
        <inlineHelpText>Enter the visit report to which this contact shall be assigned.</inlineHelpText>
        <label>Visit Report_deprecated</label>
        <referenceTo>ADvendio__Call_Report__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the contact to which this visit report shall be assigned.</description>
        <inlineHelpText>Enter the contact to which this visit report shall be assigned.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Attendee_depcrecated</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Attendee No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>